# engram

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  engram_idea.md  pyproject.toml
engram/: __init__.py  cli.py  config.py  dispatch.py  epistemic_history.py  migrate.py  migrate_epistemic_history.py  parse.py
engram/bootstrap/: __init__.py  fold.py  seed.py
engram/compact/: __init__.py  graveyard.py  timeline.py
engram/fold/: __init__.py  chunker.py  ids.py  prompt.py  queue.py  sessions.py  sources.py
engram/linter/: __init__.py  guards.py  refs.py  schema.py
engram/server/: __init__.py  briefing.py  buffer.py  db.py  dispatcher.py  watcher.py
engram/templates/: fold_prompt.md  seed_prompt.md  triage_prompt.md
examples/: config.yaml
specs/: 24_l0_briefing_on_queue_drain.md  25_temporal_orphan_triage.md  26_build_queue_respects_fold_from.md  27_evidence_commit_dates_for_epistemic_staleness.md  28_workflow_synthesis_formatting_and_cooldown.md  2_v3_implementation.md  57_workflow_synthesis_formatting_and_cooldown.md  65_preassign_unused_ids_and_active_chunk_lock.md
tests/: test_bootstrap.py  test_chunker.py  test_cli.py  test_config.py  test_epistemic_history_migration.py  test_epistemic_history_paths.py  test_graveyard.py  test_ids.py  test_l0_drain.py  test_linter.py  test_migrate.py  test_parse.py  test_queue.py  test_server.py  test_sessions.py  test_sources.py  test_temporal_orphan_triage.py
